se modifica d enuevo el get de examencontroller